# CleanCode_C

./: Notitzen_C.docx  README.md
Exercises/MyTries/grundlagen/dry/dry/: CMakeLists.txt  account.c  account.h  bank.c  bank.h  console.c  console.h  disk.c  disk.h  main.c
Exercises/MyTries/grundlagen/kiss/: kiss.sln  uml.puml
Exercises/MyTries/grundlagen/kiss/kiss/: CMakeLists.txt  calendar.c  calendar.h  datehelper.h  kiss.c  month.c  month.h  year.c  year.h
Exercises/MyTries/oop_c/classes/: classes.sln
Exercises/MyTries/oop_c/composition/composition/: main.c
Exercises/MyTries/oop_c/generalization/: CMakeLists.txt
Exercises/MyTries/oop_c/generalization/generalization/: generalization.vcxproj  generalization.vcxproj.filters
Exercises/MyTries/refactoring/composing_methods/: CMakeLists.txt
Exercises/MyTries/refactoring/composing_methods/composing_methods/: composing_methods.vcxproj
Exercises/MyTries/refactoring/moving_features_between_objects/moving_features_between_objects/: address_management.c
Exercises/MyTries/refactoring/other/other/: bubble_sort.c  bubble_sort.h  other.vcxproj
Exercises/MyTries/refactoring/simplify/simplify/: CMakeLists.txt  calculator.c  calculator.h  divide_operation.c  divide_operation.h  divide_operation_proxy.c  divide_operation_proxy.h  minus_operation.h  multiply_operation.c  multiply_operation.h  plus_operation.c  plus_operation.h  simplify.vcxproj  simplify.vcxproj.filters  tests.c  uml1.puml  uml2.puml
Exercises/MyTries/refactoring/simplify_factory/simplify/: CMakeLists.txt  calculator.c  calculator.h  divide_operation.c  divide_operation.h  i_factoryable.h  i_operationable.h  minus_operation.c  minus_operation.h  multiply_operation.c  multiply_operation.h  null_operation.c  null_operation.h  operation_factory.c  operation_factory.h  plus_operation.c  plus_operation.h  simplify.vcxproj  simplify.vcxproj.filters  tests.c  uml.puml
Exercises/MyTries/refactoring/smells/: CMakeLists.txt
Exercises/MyTries/refactoring/smells/smells/: address.c  address.h  address_management.c  address_management.h  application.c  application.h  console.c  console.h  main.c
Exercises/MyTries/refactoring/smells_interface/smells/: CMakeLists.txt  address.c  address.h  address_management.c  address_management.h  application.c  application.h  console.c  console.h  disk.c  disk.h  i_logable.h  main.c  null_object.c  null_object.h  smell.txt  smells.vcxproj  smells.vcxproj.filters  uml.puml
Exercises/MyTries/solid/ocp/: CMakeLists.txt
Exercises/MyTries/solid/ocp/ocp/: CMakeLists.txt  account.c  account.h  bank.c  bank.h  interest_calculator.c  interest_calculator.h  logger.c  logger.h  main.c
Exercises/MyTries/solid/srp/srp/: CMakeLists.txt  account.c  account.h  bank.c  bank.h  logger.c  logger.h  main.c  my_time.c  my_time.h  srp.vcxproj  srp.vcxproj.filters  uml.puml
Exercises/loesungen/: .clang-format
Exercises/loesungen/grundlagen/dry/: dry.sln
Exercises/loesungen/grundlagen/dry/dry/: CMakeLists.txt  account.c  account.h  bank.c  bank.h  dry.vcxproj  dry.vcxproj.filters  main.c  tools.c  tools.h
Exercises/loesungen/grundlagen/kiss/: CMakeLists.txt
Exercises/loesungen/grundlagen/kiss/kiss/: datehelper.h  kiss.c
Exercises/loesungen/oop_c/classes/: CMakeLists.txt
Exercises/loesungen/oop_c/classes/classes/: CMakeLists.txt  classes.vcxproj.filters
Exercises/loesungen/oop_c/classes/classes/source/: counter.h  range_checker.c
Exercises/loesungen/oop_c/composition/: CMakeLists.txt
Exercises/loesungen/oop_c/composition/composition/: composition.vcxproj.filters
Exercises/loesungen/oop_c/generalization/: generalization.sln
Exercises/loesungen/oop_c/generalization/generalization/: generalization.vcxproj  generalization.vcxproj.filters
Exercises/loesungen/refactoring/composing_methods/composing_methods/: CMakeLists.txt  counter.c  counter.h  counter_app.c  counter_app.h  main.c
Exercises/loesungen/refactoring/moving_features_between_objects/: trash.txt
Exercises/loesungen/refactoring/moving_features_between_objects/moving_features_between_objects/: CMakeLists.txt  address.c  address.h  address_management.c  address_management.h  moving_features_between_objects.vcxproj  moving_features_between_objects.vcxproj.filters  output.txt  tests.h  tools.c  tools.h
Exercises/loesungen/refactoring/other/: other.sln
Exercises/loesungen/refactoring/other/other/: bubble_sort.c  tests.c
Exercises/loesungen/refactoring/simplify/: CMakeLists.txt  simplify.sln
Exercises/loesungen/refactoring/simplify/simplify/: calculator.c  simplify.vcxproj.filters  tests.c
Exercises/loesungen/refactoring/smells/: Smells.sln
Exercises/loesungen/refactoring/smells/smells/: address.c  address_management.c  main.c  smells.vcxproj.filters
Exercises/loesungen/solid/ocp/ocp/: CMakeLists.txt  account.c  account.h  bank.c  logger.c  logger.h  main.c  ocp.vcxproj  ocp.vcxproj.filters
Exercises/loesungen/solid/srp/: CMakeLists.txt  srp.sln
Exercises/loesungen/solid/srp/srp/: CMakeLists.txt  account.c  bank.c  logging.c  logging.h  srp.vcxproj  srp.vcxproj.filters
Exercises/uebungen/: clean.bat
Exercises/uebungen/grundlagen/dry/: CMakeLists.txt
Exercises/uebungen/oop_c/composition/: composition.sln
Exercises/uebungen/oop_c/test_framework/: test_functions.h
Exercises/uebungen/refactoring/composing_methods/: composing_methods.sln  test_output
Exercises/uebungen/refactoring/moving_features_between_objects/: CMakeLists.txt  moving_features_between_objects.sln
Exercises/uebungen/refactoring/moving_features_between_objects/moving_features_between_objects/: CMakeLists.txt  address.c  address.h  input.txt  moving_features_between_objects.vcxproj  tests.c
Exercises/uebungen/refactoring/other/: CMakeLists.txt
Exercises/uebungen/refactoring/other/other/: CMakeLists.txt  main.c  other.vcxproj.filters
Exercises/uebungen/refactoring/smells/smells/: CMakeLists.txt  address.c  address.h  main.c  smells.vcxproj
Exercises/uebungen/refactoring/test_framework/: CMakeLists.txt
Exercises/uebungen/solid/ocp/: ocp.sln
(+99 files in other folders)
